--- a/_modules/evmspec/structs/header.html
+++ b/_modules/evmspec/structs/header.html
@@ -78,7 +78,7 @@
 <span class="c1"># WIP - pretty sure this will fail right now</span>
 <div class="viewcode-block" id="ErigonBlockHeader">
 <a class="viewcode-back" href="../../../source/evmspec.structs.html#evmspec.ErigonBlockHeader">[docs]</a>
-<span class="k">class</span><span class="w"> </span><span class="nc">ErigonBlockHeader</span><span class="p">(</span><span class="n">LazyDictStruct</span><span class="p">,</span> <span class="n">frozen</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">kw_only</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">forbid_unknown_fields</span><span class="o">=</span><span class="kc">True</span><span class="p">):</span>  <span class="c1"># type: ignore [call-arg]</span>
+<span class="k">class</span><span class="w"> </span><span class="nc">ErigonBlockHeader</span><span class="p">(</span><span class="n">LazyDictStruct</span><span class="p">,</span> <span class="n">frozen</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">kw_only</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">forbid_unknown_fields</span><span class="o">=</span><span class="kc">True</span><span class="p">):</span>  <span class="c1"># type: ignore [call-arg, misc]</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Represents a block header in the Erigon client.</span>
 
