--- a/_modules/evmspec/structs/trace/create.html
+++ b/_modules/evmspec/structs/trace/create.html
@@ -92,7 +92,7 @@
     <span class="n">forbid_unknown_fields</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
     <span class="n">omit_defaults</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
     <span class="n">repr_omit_defaults</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
-<span class="p">):</span>  <span class="c1"># type: ignore [call-arg]</span>
+<span class="p">):</span>  <span class="c1"># type: ignore [call-arg, misc]</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;Represents the action type for contract creations.</span>
 
 <span class="sd">    This class captures the initialization code necessary for deploying a</span>
@@ -125,7 +125,7 @@
     <span class="n">forbid_unknown_fields</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
     <span class="n">omit_defaults</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
     <span class="n">repr_omit_defaults</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
-<span class="p">):</span>  <span class="c1"># type: ignore [call-arg]</span>
+<span class="p">):</span>  <span class="c1"># type: ignore [call-arg, misc]</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;Represents the result of a contract creation action.</span>
 
 <span class="sd">    It includes details such as the address and bytecode of the newly</span>
@@ -162,7 +162,7 @@
     <span class="n">forbid_unknown_fields</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
     <span class="n">omit_defaults</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
     <span class="n">repr_omit_defaults</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
-<span class="p">):</span>  <span class="c1"># type: ignore [call-arg]</span>
+<span class="p">):</span>  <span class="c1"># type: ignore [call-arg, misc]</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;Represents a trace of a contract deployment.</span>
 
 <span class="sd">    Provides a detailed trace structure which includes raw action data</span>
