--- a/_modules/evmspec/structs/trace/reward.html
+++ b/_modules/evmspec/structs/trace/reward.html
@@ -114,7 +114,7 @@
     <span class="n">forbid_unknown_fields</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
     <span class="n">omit_defaults</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
     <span class="n">repr_omit_defaults</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
-<span class="p">):</span>  <span class="c1"># type: ignore [call-arg]</span>
+<span class="p">):</span>  <span class="c1"># type: ignore [call-arg, misc]</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;Action type for rewards.</span>
 
 <span class="sd">    This class extends :class:`_ActionBase` to include specific attributes</span>
@@ -149,7 +149,7 @@
     <span class="n">forbid_unknown_fields</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
     <span class="n">omit_defaults</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
     <span class="n">repr_omit_defaults</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
-<span class="p">):</span>  <span class="c1"># type: ignore [call-arg]</span>
+<span class="p">):</span>  <span class="c1"># type: ignore [call-arg, misc]</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;Represents the trace for a reward in Ethereum.</span>
 
 <span class="sd">    This class extends :class:`_FilterTraceBase` and is specifically tagged</span>
