--- a/_modules/evmspec/structs/trace/call.html
+++ b/_modules/evmspec/structs/trace/call.html
@@ -228,9 +228,7 @@
 
 
 
-<span class="n">_decode_action</span><span class="p">:</span> <span class="n">Final</span><span class="p">[</span><span class="n">Callable</span><span class="p">[[</span><span class="n">Raw</span><span class="p">],</span> <span class="n">Action</span><span class="p">]]</span> <span class="o">=</span> <span class="n">Decoder</span><span class="p">(</span>
-    <span class="nb">type</span><span class="o">=</span><span class="n">Action</span><span class="p">,</span> <span class="n">dec_hook</span><span class="o">=</span><span class="n">_decode_hook</span>
-<span class="p">)</span><span class="o">.</span><span class="n">decode</span>
+<span class="n">_decode_action</span><span class="p">:</span> <span class="n">Final</span><span class="p">[</span><span class="n">Callable</span><span class="p">[[</span><span class="n">Raw</span><span class="p">],</span> <span class="n">Action</span><span class="p">]]</span> <span class="o">=</span> <span class="n">Decoder</span><span class="p">(</span><span class="nb">type</span><span class="o">=</span><span class="n">Action</span><span class="p">,</span> <span class="n">dec_hook</span><span class="o">=</span><span class="n">_decode_hook</span><span class="p">)</span><span class="o">.</span><span class="n">decode</span>
 </pre></div>
 
            </div>
