--- a/_modules/evmspec/structs/transaction.html
+++ b/_modules/evmspec/structs/transaction.html
@@ -165,9 +165,9 @@
 
 
 
-<span class="n">_decode_authorization_list</span><span class="p">:</span> <span class="n">Final</span><span class="p">[</span><span class="n">Callable</span><span class="p">[[</span><span class="n">Raw</span><span class="p">],</span> <span class="nb">list</span><span class="p">[</span><span class="n">AuthorizationListEntry</span><span class="p">]]]</span> <span class="o">=</span> <span class="p">(</span>
-    <span class="n">Decoder</span><span class="p">(</span><span class="nb">type</span><span class="o">=</span><span class="nb">list</span><span class="p">[</span><span class="n">AuthorizationListEntry</span><span class="p">])</span><span class="o">.</span><span class="n">decode</span>
-<span class="p">)</span>
+<span class="n">_decode_authorization_list</span><span class="p">:</span> <span class="n">Final</span><span class="p">[</span><span class="n">Callable</span><span class="p">[[</span><span class="n">Raw</span><span class="p">],</span> <span class="nb">list</span><span class="p">[</span><span class="n">AuthorizationListEntry</span><span class="p">]]]</span> <span class="o">=</span> <span class="n">Decoder</span><span class="p">(</span>
+    <span class="nb">type</span><span class="o">=</span><span class="nb">list</span><span class="p">[</span><span class="n">AuthorizationListEntry</span><span class="p">]</span>
+<span class="p">)</span><span class="o">.</span><span class="n">decode</span>
 
 
 <span class="k">class</span><span class="w"> </span><span class="nc">_TransactionBase</span><span class="p">(</span><span class="n">LazyDictStruct</span><span class="p">,</span> <span class="n">frozen</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">kw_only</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">forbid_unknown_fields</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">omit_defaults</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">repr_omit_defaults</span><span class="o">=</span><span class="kc">True</span><span class="p">):</span>  <span class="c1"># type: ignore [call-arg, misc]</span>
