--- a/_modules/evmspec/data/uints.html
+++ b/_modules/evmspec/data/uints.html
@@ -82,7 +82,7 @@
 <span class="kn">import</span><span class="w"> </span><span class="nn">sys</span>
 <span class="kn">from</span><span class="w"> </span><span class="nn">typing</span><span class="w"> </span><span class="kn">import</span> <span class="n">ClassVar</span><span class="p">,</span> <span class="n">Final</span>
 
-<span class="kn">from</span><span class="w"> </span><span class="nn">hexbytes</span><span class="w"> </span><span class="kn">import</span> <span class="n">HexBytes</span>
+<span class="kn">from</span><span class="w"> </span><span class="nn">hexbytes</span><span class="w"> </span><span class="kn">import</span> <span class="n">HexBytes</span>  <span class="c1"># type: ignore [import-not-found]</span>
 
 <span class="kn">from</span><span class="w"> </span><span class="nn">evmspec.data._main</span><span class="w"> </span><span class="kn">import</span> <span class="n">uint</span>
 
