--- a/_modules/evmspec/structs/trace/suicide.html
+++ b/_modules/evmspec/structs/trace/suicide.html
@@ -76,14 +76,14 @@
 
 <div class="viewcode-block" id="Action">
 <a class="viewcode-back" href="../../../../source/evmspec.structs.trace.html#evmspec.structs.trace.suicide.Action">[docs]</a>
-<span class="k">class</span><span class="w"> </span><span class="nc">Action</span><span class="p">(</span>
+<span class="k">class</span><span class="w"> </span><span class="nc">Action</span><span class="p">(</span>  <span class="c1"># type: ignore [call-arg, misc]</span>
     <span class="n">_ActionBase</span><span class="p">,</span>
     <span class="n">frozen</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
     <span class="n">kw_only</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
     <span class="n">forbid_unknown_fields</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
     <span class="n">omit_defaults</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
     <span class="n">repr_omit_defaults</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
-<span class="p">):</span>  <span class="c1"># type: ignore [call-arg, misc]</span>
+<span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Represents the action type for contract suicides.</span>
 
@@ -113,7 +113,7 @@
 
 <div class="viewcode-block" id="Trace">
 <a class="viewcode-back" href="../../../../source/evmspec.structs.trace.html#evmspec.structs.trace.suicide.Trace">[docs]</a>
-<span class="k">class</span><span class="w"> </span><span class="nc">Trace</span><span class="p">(</span>
+<span class="k">class</span><span class="w"> </span><span class="nc">Trace</span><span class="p">(</span>  <span class="c1"># type: ignore [call-arg, misc]</span>
     <span class="n">_FilterTraceBase</span><span class="p">,</span>
     <span class="n">tag</span><span class="o">=</span><span class="s2">&quot;suicide&quot;</span><span class="p">,</span>
     <span class="n">frozen</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
@@ -121,7 +121,7 @@
     <span class="n">forbid_unknown_fields</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
     <span class="n">omit_defaults</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
     <span class="n">repr_omit_defaults</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
-<span class="p">):</span>  <span class="c1"># type: ignore [call-arg, misc]</span>
+<span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Represents a trace of a contract self-destruct operation.</span>
 
