--- a/_modules/evmspec/structs/transaction.html
+++ b/_modules/evmspec/structs/transaction.html
@@ -86,6 +86,7 @@
     <span class="n">Nonce</span><span class="p">,</span>
     <span class="n">TransactionHash</span><span class="p">,</span>
     <span class="n">Wei</span><span class="p">,</span>
+    <span class="n">_decode_hook</span><span class="p">,</span>
     <span class="n">uint</span><span class="p">,</span>
 <span class="p">)</span>
 <span class="kn">from</span><span class="w"> </span><span class="nn">evmspec.data._ids</span><span class="w"> </span><span class="kn">import</span> <span class="n">ChainId</span><span class="p">,</span> <span class="n">TransactionIndex</span>
@@ -148,7 +149,7 @@
 
 
 <span class="n">_decode_access_list</span><span class="p">:</span> <span class="n">Final</span><span class="p">[</span><span class="n">Callable</span><span class="p">[[</span><span class="n">Raw</span><span class="p">],</span> <span class="nb">list</span><span class="p">[</span><span class="n">AccessListEntry</span><span class="p">]]]</span> <span class="o">=</span> <span class="n">Decoder</span><span class="p">(</span>
-    <span class="nb">type</span><span class="o">=</span><span class="nb">list</span><span class="p">[</span><span class="n">AccessListEntry</span><span class="p">]</span>
+    <span class="nb">type</span><span class="o">=</span><span class="nb">list</span><span class="p">[</span><span class="n">AccessListEntry</span><span class="p">],</span> <span class="n">dec_hook</span><span class="o">=</span><span class="n">_decode_hook</span>
 <span class="p">)</span><span class="o">.</span><span class="n">decode</span>
 
 
@@ -167,7 +168,7 @@
 
 
 <span class="n">_decode_authorization_list</span><span class="p">:</span> <span class="n">Final</span><span class="p">[</span><span class="n">Callable</span><span class="p">[[</span><span class="n">Raw</span><span class="p">],</span> <span class="nb">list</span><span class="p">[</span><span class="n">AuthorizationListEntry</span><span class="p">]]]</span> <span class="o">=</span> <span class="n">Decoder</span><span class="p">(</span>
-    <span class="nb">type</span><span class="o">=</span><span class="nb">list</span><span class="p">[</span><span class="n">AuthorizationListEntry</span><span class="p">]</span>
+    <span class="nb">type</span><span class="o">=</span><span class="nb">list</span><span class="p">[</span><span class="n">AuthorizationListEntry</span><span class="p">],</span> <span class="n">dec_hook</span><span class="o">=</span><span class="n">_decode_hook</span>
 <span class="p">)</span><span class="o">.</span><span class="n">decode</span>
 
 
